--- a/src/style.css
+++ b/src/style.css
@@ -98,11 +98,11 @@ body {
   clear: both;
 }
 
-img {
+.el-image {
   width: 100%;
   height: 100%;
   transition: transform 0.3s;
 }
-img:hover {
+.el-image:hover {
   transform: scale(1.1);
 }
